# agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
docs/: architecture.md
src/: constants.rs  harness.rs  lib.rs  llm.rs  main.rs  tools.rs  utils.rs
src/agent/: main.py  tools.py
src/agent/data/: prompts.py
